# pp_detection

./: CMakeLists.txt  README.md  palmprint_dectection.vcxproj  palmprint_dectection.vcxproj.filters
Debug/: palmprint_dectection.pch  vc141.idb
Debug/palmprin.591BFE96.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  palmprint_dectection.lastbuildstate
include/: HandDetector.h  ImageReader.h  ImageSaver.h  ObjectDetector.h
src/: HandDetector.cpp  ImageReader.cpp  ObjectDetector.cpp  palmprint_dectection.cpp  pp_detect_batch.cpp
x64/Debug/: palmprint_dectection.pch  vc141.idb
x64/Debug/palmprin.591BFE96.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  palmprint_dectection.lastbuildstate
